# GraphicRender

./: CMakeLists.txt  Camera.cpp  Camera.h  Reader.cpp  Reader.h
Nodes/: Geometry.cpp  Geometry.h  Group.cpp  Group.h  Node.cpp  Node.h  Transform.cpp  Transform.h
Nodes/StateData/: Light.cpp  Light.h  Material.cpp  Material.h  State.cpp  State.h  Texture.cpp  Texture.h
Visitors/: NodeVisitor.cpp  NodeVisitor.h  RenderVisitor.cpp  RenderVisitor.h  UpdateCallback.cpp  UpdateCallback.h  UpdateVisitor.cpp  UpdateVisitor.h
